# ORMATEX

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Cargo.toml  LICENSE.txt  README.md  paper.bib  paper.md  pyproject.toml  setup.py
docs/: readme.rst  sphinx-apidoc-gen.sh
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst  ormatex_py.rst  quick_start.rst
examples/: ex_matexp_1.rs  ex_ormatex_rspy.py  ex_sys_1.rs  ex_sys_2.rs
ormatex_py/: arnoldi_jax.py  integrate_wrapper.py  matexp_krylov.py  matexp_leja.py  matexp_phi.py  matexp_phi_pfd_dict.py  matexp_poly.py  ode_epirk.py  ode_exp.py  ode_explicit.py  ode_sys.py  ode_utils.py
ormatex_py/progression/: advection_diffusion_1d.py  advection_diffusion_ns_1d.py  bateman_nonlin_sys.py  bateman_sys.py  element_line_pp_nodal.py  integrate_wrapper.py  lotka_volterra.py  rad_1d_2s.py  rad_1d_3s.py  rad_1d_9s.py  reaction_advection_diffusion_1d.py  species_source_sink.py
src/: arnoldi.rs  lib.rs  mat_utils.rs  matexp_cauchy.rs  matexp_krylov.rs  matexp_pade.rs  newton.rs  ode_bdf.rs  ode_epirk.rs  ode_expros.rs  ode_rk.rs  ode_sys.rs  ode_test_common.rs  ode_utils.rs  ormatex_rspy.rs
tests/: test_arnoldi.py  test_dd.py  test_phi.py  test_regression_bateman.py  test_regression_lotka_volterra.py  test_rust_py.py
