[package]
name = "ormatex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ormatex"
path = 'src/lib.rs'

[dependencies]
thiserror = "1.0"
assert_approx_eq = "1.1.0"
num-traits = "0.2.18"
reborrow = "0.5.5"
faer = {version = "0.19.4", features=["unstable",]}
libm = "0.2.8"
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3.5"
faer_gmres = "0.0.5"
