[package]
name = "ormatex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ormatex"
crate-type = ["cdylib", "rlib"]
path = 'src/lib.rs'

[dependencies]
thiserror = "1.0"
assert_approx_eq = "1.1.0"
num-traits = "0.2.18"
reborrow = "0.5.5"
faer = {version = "0.20.1", features=["unstable",]}
libm = "0.2.8"
rand = "0.8.5"
rand_distr = "0.4.3"
faer_gmres = "0.1.0"
# plotters = "0.3.5"
# python binding deps
pyo3 = {version="0.23", features = ["extension-module"]}
numpy = "0.23"
ndarray = {version="0.16", features=["rayon"]}
faer-ext = {version="0.4.1", features=["ndarray"]}
