[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "ormatex_py"
version = "0.0.1"
#dynamic = ["version"]
authors = [
    {name = "William Gurecky", email = "gureckywl@ornl.gov"},
    {name = "Konstantin Pieper", email = "pieperk@ornl.gov"},
]
description = "Matrix exponential routines and exponential time integrators"
readme = "README.md"
requires-python = ">=3.8"
keywords = [ "matrix exponential", "time integration", "exponential time integration"]
license = {text = "TBD"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.8.0", "scipy>=0.12.0",
	    "jax", "equinox",
	    "pytest"
	    ]

[project.optional-dependencies]
plot = ["matplotlib"]
fem = ["scikit-fem"]

#[project.scripts]
#my-script = "my_package.module:function"

#[tool.setuptools.packages]
#find = {namespaces = false}  # Disable implicit namespaces

[tool.setuptools]
packages = ["ormatex_py"]
